# libxc

./: .codecov.yml  .cvsignore  .gitattributes  .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.md  DONE  Doxyfile  KNOWN_ISSUES  Makefile.am  NEWS  PACKAGING  README  README-CMake.md  README.md  TODO  appveyor.yml  backport.sh  config.h.cmake.in  configure.ac  gga.c  gga_lb.c  gga_pbe.c  gga_x_b88.c  lca_lch.c  lca_omc.c  lda.c  lda_c_amgb.c  lda_c_pw.c  lda_c_pz.c  lda_c_vwn.c  lda_funcs.c  lda_x.c  libxc.bib  mgga.c  mgga_c_tpss.c  mgga_x_tpss.c  (+7 more)
libxc/: .cvsignore  ChangeLog  DONE  Makefile.am  NEWS  PACKAGING  README  TODO  configure.ac  gga.c  gga_lb.c  gga_pbe.c  gga_x_b88.c  lca.c  lca_lch.c  lca_omc.c  lda.c  lda_c_amgb.c  lda_c_pw.c  lda_c_pz.c  lda_c_vwn.c  lda_funcs.c  lda_x.c  mgga.c  mgga_c_tpss.c  mgga_x_tpss.c  test.c  util.h  xc.h  xc_f.c
libxc/m4/: acx.m4  fcflags.m4
libxc/src/: Makefile.am  bessel.c  expint_e1.c  functionals.c  get_funcs.pl  gga.c  gga_c_am05.c  gga_c_ft97.c  gga_c_lm.c  gga_c_lyp.c  gga_c_optc.c  gga_c_p86.c  gga_c_pbe.c  gga_c_pw91.c  gga_c_sogga11.c  gga_c_tca.c  gga_c_wi.c  gga_k_dk.c  gga_k_ge2.c  gga_k_meyer.c  gga_k_ol2.c  gga_k_pearson.c  gga_k_tflw.c  gga_lb.c  gga_pbe.c  gga_perdew.c  gga_x.c  gga_x_2D_b86_mgc.c  gga_x_2d_b86_mgc.c  gga_x_2d_b88.c  gga_x_2d_pbe.c  gga_x_airy.c  gga_x_ak13.c  gga_x_am05.c  gga_x_b86.c  gga_x_b86_mgc.c  gga_x_b88.c  gga_x_bayesian.c  gga_x_bpccac.c  gga_x_c09x.c  (+113 more)
libxc/testsuite/: Makefile.am  xc-consistency.c  xc-get_data.c  xc-reference.pl  xc-regression.c  xc-run_regression_test.pl  xc-run_testsuite
m4/: acx.m4  (+7 more)
maple/: Makefile.am  attenuation.mpl  b97.mpl  b97mv.mpl  check_attenuation.mpl  fw.mpl  gga_c_am05.mpl  gga_c_bcgp.mpl  gga_c_bmk.mpl  gga_c_cs1.mpl  gga_c_ft97.mpl  gga_c_gapc.mpl  gga_c_gaploc.mpl  gga_c_hcth_a.mpl  gga_c_lm.mpl  gga_c_lyp.mpl  gga_c_op_b88.mpl  gga_c_op_g96.mpl  gga_c_op_pbe.mpl  gga_c_op_pw91.mpl  gga_c_op_xalpha.mpl  gga_c_optc.mpl  gga_c_p86.mpl  gga_c_pbe.mpl  gga_c_pbeloc.mpl  gga_c_pw91.mpl  gga_c_q2d.mpl  gga_c_regtpss.mpl  gga_c_revtca.mpl  gga_c_scan_e0.mpl  gga_c_sg4.mpl  gga_c_sogga11.mpl  gga_c_tca.mpl  gga_c_w94.mpl  gga_c_wi.mpl  gga_c_wl.mpl  gga_c_zpbeint.mpl  gga_c_zvpbeint.mpl  gga_k_apbeint.mpl  gga_k_dk.mpl  (+155 more)
maple/gga_exc/: Makefile.am  gga_c_am05.mpl  gga_c_apbe_bfit.mpl  gga_c_bmk.mpl  gga_c_ccdf.mpl  gga_c_chachiyo.mpl  gga_c_ft97.mpl  gga_c_lm.mpl  gga_c_lyp.mpl  gga_c_lypr.mpl  gga_c_op_pw91.mpl  gga_c_optc.mpl  gga_c_p86.mpl  gga_c_p86vwn.mpl  gga_c_pbe.mpl  gga_c_pbe_erf_gws.mpl  gga_c_pbe_vwn.mpl  gga_c_revtca.mpl  gga_c_sogga11.mpl  gga_c_tca.mpl  gga_c_wi.mpl  gga_c_zpbeint.mpl  gga_c_zvpbeint.mpl  gga_k_apbe.mpl  gga_k_apbeint.mpl  gga_k_dk.mpl  gga_k_lc94.mpl  gga_k_lgap.mpl  gga_k_lgap_ge.mpl  gga_k_lkt.mpl  gga_k_llp.mpl  gga_k_meyer.mpl  gga_k_mpbe.mpl  gga_k_ol1.mpl  gga_k_ol2.mpl  gga_k_pg.mpl  gga_k_rational_p.mpl  gga_k_tflw.mpl  gga_k_vt84f.mpl  gga_x_ak13.mpl  (+46 more)
maple/gga_vxc/: Makefile.am  gga_x_lb.mpl
maple/hgga_exc/: Makefile.am  hgga_x_jse_b88.mpl
maple/lda_exc/: Makefile.am  hyb_lda_xc_bn05.mpl  lda_c_1d_csc.mpl  lda_c_2d_prm.mpl  lda_c_chachiyo.mpl  lda_c_chachiyo_mod.mpl  lda_c_gk72.mpl  lda_c_hl.mpl  lda_c_lp96.mpl  lda_c_ml1.mpl  lda_c_pk09.mpl  lda_c_pmgb06.mpl  lda_c_pw.mpl  lda_c_pw_erf.mpl  lda_c_pz.mpl  lda_c_rc04.mpl  lda_c_vwn_1.mpl  lda_c_vwn_rpa.mpl  lda_c_w20.mpl  lda_c_wigner.mpl  lda_k_gds08_worker.mpl  lda_k_tf.mpl  lda_k_zlp.mpl  lda_x.mpl  lda_x_1d_exponential.mpl  lda_x_1d_soft.mpl  lda_x_2d.mpl  lda_x_erf.mpl  lda_x_rel.mpl  lda_x_sloc.mpl  lda_x_yukawa.mpl  lda_xc_1d_ehwlrg.mpl  lda_xc_bn05.mpl  lda_xc_ksdt.mpl  lda_xc_teter93.mpl  lda_xc_zlp.mpl
maple/lda_vxc/: Makefile.am
maple/mgga_exc/: Makefile.am  hyb_mgga_x_js18.mpl  hyb_mgga_x_m05.mpl  hyb_mgga_x_pjs18.mpl  hyb_mgga_xc_gas22.mpl  hyb_mgga_xc_wb97mv.mpl  mgga_c_b88.mpl  mgga_c_b94.mpl  mgga_c_bc95.mpl  mgga_c_cc.mpl  mgga_c_ccalda.mpl  mgga_c_ggms.mpl  mgga_c_kcis.mpl  mgga_c_ldms.mpl  mgga_c_ltapw.mpl  mgga_c_m05.mpl  mgga_c_m06l.mpl  mgga_c_m08.mpl  mgga_c_pkzb.mpl  mgga_c_r2scan.mpl  mgga_c_revscan.mpl  mgga_c_revtpss.mpl  mgga_c_rmggac.mpl  mgga_c_rppscan.mpl  mgga_c_rregtm.mpl  mgga_c_rscan.mpl  mgga_c_scan.mpl  mgga_c_scanl.mpl  mgga_c_tpss.mpl  mgga_c_tpssloc.mpl  mgga_c_vsxc.mpl  mgga_k_csk.mpl  mgga_k_csk_loc.mpl  mgga_k_lk.mpl  mgga_k_pc07.mpl  mgga_k_pgslb.mpl  mgga_k_rda.mpl  mgga_x_2d_prhg07.mpl  mgga_x_br89.mpl  mgga_x_br89_explicit.mpl  (+44 more)
maple/mgga_vxc/: Makefile.am  mgga_x_tb09.mpl
math2c/: Makefile.am  gga_x_g96.c  gga_x_herman.c  gga_x_wc.c
scripts/: Makefile.am  get_funcs.pl  get_functional_info.py  get_references.pl  get_references.py  maple2c.pl  maple2c.py  maple2c_derivatives.pm  maple2c_new.pl  maple2c_work.pm  maple2c_work_gga_c_info.pl  maple2c_work_lda_0_info.pl  maple2c_work_lda_1_info.pl  math2c.pl  math_deorbitalize.pl  math_deorbitalize.py  mk_work_info.pl
scripts/maple2c_info/: work_gga_x.pl  work_mgga_c.pl
scripts/maple2c_lib/: gga.py  hgga.py  lda.py  mgga.py  utils.py
src/: Makefile.am  bessel.c  decl_gga.h  decl_lda.h  decl_mgga.h  deorbitalize_func.c  expint_e1.c  faddeeva.c  func_info.c  func_reference.c  funcs_gga.c  funcs_hgga.c  funcs_hyb_gga.c  funcs_hyb_lda.c  funcs_hyb_mgga.c  funcs_key.c  funcs_lda.c  funcs_mgga.c  functionals.c  genwiki.c  get_funcs.pl  get_references.pl  gga.c  gga_c_acgga.c  gga_c_acggap.c  gga_c_am05.c  gga_c_apbe_bfit.c  gga_c_bcgp.c  gga_c_bmk.c  gga_c_ccdf.c  gga_c_chachiyo.c  gga_c_cs1.c  gga_c_ft97.c  gga_c_gapc.c  gga_c_gaploc.c  gga_c_hcth_a.c  gga_c_lm.c  gga_c_lyp.c  gga_c_lypr.c  gga_c_op.c  (+389 more)
src/hand_written/: Makefile.am  gga_x_airy.c  gga_x_ak13.c  gga_x_am05.c  gga_x_b86.c  gga_x_b88.c  gga_x_bayesian.c  gga_x_c09x.c  gga_x_g96.c  gga_x_herman.c  gga_x_rpbe.c  gga_x_wc.c  lda_x.c
testsuite/: CMakeLists.txt  Makefile.am  xc-auto.c  xc-consistency.c  xc-cuda.c  xc-error.c  xc-get_data.c  xc-mv-fail  xc-reference.pl  xc-regression.c  xc-reset-regression  xc-reset-regression-fail  xc-run_regression_test.pl  xc-run_testsuite
(+20476 files in other folders)
