dist_noinst_SCRIPTS = \
  util.mpl fw.mpl gvt4.mpl tpss_x.mpl \
  lda_c_pz.mpl lda_xc_1d_ehwlrg.mpl lda_c_rc04.mpl lda_c_pw.mpl             \
  lda_c_gombas.mpl lda_c_chachiyo.mpl lda_c_wigner.mpl lda_c_rpa.mpl        \
  vwn.mpl lda_c_vwn.mpl lda_c_vwn_1.mpl lda_c_vwn_2.mpl lda_c_vwn_3.mpl     \
  lda_c_vwn_4.mpl lda_c_vwn_rpa.mpl lda_c_ml1.mpl lda_c_hl.mpl lda_k_tf.mpl \
  lda_xc_zlp.mpl lda_xc_teter93.mpl lda_xc_ksdt.mpl lda_c_2d_prm.mpl        \
  lda_c_1d_loos.mpl lda_c_2d_amgb.mpl lda_c_1d_csc.mpl lda_x.mpl            \
  lda_x_2d.mpl lda_x_erf.mpl lda_x_rel.mpl lda_k_zlp.mpl lda_c_pk09.mpl     \
  gga_k_thakkar.mpl gga_x_b86.mpl gga_x_g96.mpl gga_x_rpbe.mpl              \
  gga_x_airy.mpl gga_x_b88.mpl gga_x_herman.mpl gga_x_wc.mpl gga_x_ak13.mpl \
  gga_x_bayesian.mpl gga_x_lag.mpl gga_x_am05.mpl gga_x_c09x.mpl            \
  gga_x_pbepow.mpl gga_x_pbeint.mpl gga_x_pbe.mpl gga_x_rge2.mpl            \
  gga_x_beefvdw.mpl gga_x_pw91.mpl gga_x_pbea.mpl gga_x_mpbe.mpl            \
  gga_x_sg4.mpl gga_x_cap.mpl gga_x_lg93.mpl gga_x_pw86.mpl gga_x_dk87.mpl  \
  gga_x_ssb_sw.mpl gga_x_sogga11.mpl gga_x_optx.mpl gga_x_q2d.mpl           \
  gga_x_lv_rpw86.mpl gga_x_kt.mpl gga_x_ft97.mpl gga_x_eg93.mpl             \
  gga_x_hcth_a.mpl gga_x_htbs.mpl gga_k_dk.mpl gga_k_meyer.mpl              \
  gga_k_ol1.mpl gga_k_ol2.mpl gga_k_pearson.mpl gga_k_tflw.mpl              \
  gga_x_2d_b86.mpl gga_x_2d_b86_mgc.mpl gga_x_2d_b88.mpl gga_x_2d_pbe.mpl   \
  gga_x_bpccac.mpl gga_x_vmt84.mpl gga_x_vmt.mpl gga_x_hjs_b88_v2.mpl       \
  gga_x_hjs.mpl gga_x_n12.mpl \
  gga_c_wi.mpl gga_c_wl.mpl gga_c_lm.mpl gga_c_p86.mpl gga_c_am05.mpl       \
  gga_c_revtca.mpl gga_c_tca.mpl gga_c_bcgp.mpl gga_c_zpbeint.mpl           \
  gga_c_pbe.mpl gga_c_pbeloc.mpl gga_c_sg4.mpl gga_c_regtpss.mpl            \
  gga_c_scan_e0.mpl gga_c_pw91.mpl gga_c_q2d.mpl gga_c_optc.mpl             \
  gga_c_lyp.mpl gga_c_sogga11.mpl \
  mgga_x_gvt4.mpl mgga_x_lta.mpl mgga_x_mk00.mpl mgga_x_ms.mpl              \
  mgga_x_mvs.mpl mgga_x_pkzb.mpl mgga_x_tpss.mpl mgga_x_tm.mpl              \
  mgga_x_vt84.mpl mgga_x_sa_tpss.mpl mgga_k_pc07.mpl \
  mgga_x_tau_hcth.mpl mgga_x_scan.mpl
