## Copyright (C) 2017 M. Marques
##
## This Source Code Form is subject to the terms of the Mozilla Public
## License, v. 2.0. If a copy of the MPL was not distributed with this
## file, You can obtain one at http://mozilla.org/MPL/2.0/.
##

dist_noinst_SCRIPTS = get_functional_info.py get_references.py	\
  maple2c.py maple2c_lib/lda.py maple2c_lib/gga.py		\
  maple2c_lib/mgga.py maple2c_lib/utils.py math_deorbitalize.py
